implement selectRecipes